Fixed sidebar text not fitting inside block with new font

--- a/htdocs/css/kmom03.css
+++ b/htdocs/css/kmom03.css
@@ -5315,14 +5315,14 @@ article,
 .region-main.has-sidebar {
   display: inline;
   float: left;
-  width: 82.29166667%;
+  width: 78.125%;
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
 }
 .region-main.has-sidebar-left.has-sidebar-right {
   display: inline;
   float: left;
-  width: 65.625%;
+  width: 57.29166667%;
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
 }
@@ -5330,7 +5330,7 @@ article,
 .region-sidebar-left {
   display: inline;
   float: left;
-  width: 15.625%;
+  width: 19.79166667%;
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
   word-wrap: break-word;
